About Me Updates
Made changes to the about me section including adding Curriculum Vitae text and document.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 									<div class="content">
 										<h2 class="major">About Me</h2>
 										<p>Pioneer in science data management, Public Access and Open Data, GIS, strategic digital product development, community building and operations specializing in all phases of the Scientific Data Management Lifecycle.  25 years of experience in science data management and science support, international science capacity building, with a wide range of technical and science operations experience.</p>
-										<a href="#" class="special">Resume</a>
-										<a href="#" class="special">Learn more</a>
+										<a href="documents/Gregory_Gunther_GIS_CV_June_2025.pdf" class="special">Curriculum Vitae</a>
+										<a href="#" class="special">Skills</a>
 									</div>
 								</div>
 							</section>
