--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><img src="images/globe5.png" alt="Logo" style="height: 70px;"></div>
 							<h2>Gregory L. Gunther</h2>
 							<p>Your Data Has A Story, Let Me Tell It!</p>
 						</div>
@@ -60,7 +60,8 @@
 										<h2 class="major">About Me</h2>
 										<p>Pioneer in science data management, Public Access and Open Data, GIS, strategic digital product development, community building and operations specializing in all phases of the Scientific Data Management Lifecycle.  25 years of experience in science data management and science support, international science capacity building, with a wide range of technical and science operations experience.</p>
 										<a href="documents/Gregory_Gunther_GIS_CV_June_2025.pdf" class="special">Curriculum Vitae</a>
-										<a href="#" class="special">Skills</a>
+										<a href="documents/skills_pydantic_dm.py" class="special">Skills</a>
+										<a href="documents/skills_pydantic_dm.py" class="special">Skills (Pydantic)</a>
 									</div>
 								</div>
 							</section>
@@ -165,7 +166,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Banner Globe Icon by pngtree.com</li>
 							</ul>
 						</div>
 					</section>
